src/main/gen/com/wps/cloud/xidl/language/parser/XidlParser.java
// This is a generated file. Not intended for manual editing.
package com.wps.cloud.xidl.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.wps.cloud.xidl.language.psi.XidlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class XidlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, null);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return xidlFile(builder_, level_ + 1);
  }

  /* ********************************************************** */
  // cmd_object | def_object | tag_object | (<<text_empty_block_object text_empty_object_key>>)
  //                       | include_object | schema_object | endpoints_object | mdepends_object | common_object
  static boolean all_object(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "all_object")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = cmd_object(builder_, level_ + 1);
    if (!result_) result_ = def_object(builder_, level_ + 1);
    if (!result_) result_ = tag_object(builder_, level_ + 1);
    if (!result_) result_ = all_object_3(builder_, level_ + 1);
    if (!result_) result_ = include_object(builder_, level_ + 1);
    if (!result_) result_ = schema_object(builder_, level_ + 1);
    if (!result_) result_ = endpoints_object(builder_, level_ + 1);
    if (!result_) result_ = mdepends_object(builder_, level_ + 1);
    if (!result_) result_ = common_object(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // <<text_empty_block_object text_empty_object_key>>
  private static boolean all_object_3(PsiBuilder builder_, int level_) {
    return text_empty_block_object(builder_, level_ + 1, XidlParser::text_empty_object_key);
  }

  /* ********************************************************** */
  // STRING_LITERAL
  public static boolean anno_string(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "anno_string")) return false;
    if (!nextTokenIs(builder_, STRING_LITERAL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, STRING_LITERAL);
    exit_section_(builder_, marker_, ANNO_STRING, result_);
    return result_;
  }

  /* ********************************************************** */
  // <<comma_separated_list anno_string>>
  static boolean anno_string_list(PsiBuilder builder_, int level_) {
    return comma_separated_list(builder_, level_ + 1, XidlParser::anno_string);
  }

  /* ********************************************************** */
  // zero_param_anno | single_param_anno | multi_param_anno | custom_anno
  static boolean annotation(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "annotation")) return false;
    boolean result_;
    result_ = zero_param_anno(builder_, level_ + 1);
    if (!result_) result_ = single_param_anno(builder_, level_ + 1);
    if (!result_) result_ = multi_param_anno(builder_, level_ + 1);
    if (!result_) result_ = custom_anno(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // "{" <<param>> "}"
  public static boolean block_meta(PsiBuilder builder_, int level_, Parser param) {
    if (!recursion_guard_(builder_, level_, "block_meta")) return false;
    if (!nextTokenIs(builder_, LBRACE)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LBRACE);
    result_ = result_ && param.parse(builder_, level_);
    result_ = result_ && consumeToken(builder_, RBRACE);
    exit_section_(builder_, marker_, BLOCK_META, result_);
    return result_;
  }

  /* ********************************************************** */
  // annotation* "cmd" text <<block_meta (key_type_list | cmd_object)* >>?
  static boolean cmd_object(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cmd_object")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = cmd_object_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, "cmd");
    pinned_ = result_; // pin = 2
    result_ = result_ && report_error_(builder_, text(builder_, level_ + 1));
    result_ = pinned_ && cmd_object_3(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // annotation*
  private static boolean cmd_object_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cmd_object_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!annotation(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "cmd_object_0", pos_)) break;
    }
    return true;
  }

  // <<block_meta (key_type_list | cmd_object)* >>?
  private static boolean cmd_object_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cmd_object_3")) return false;
    block_meta(builder_, level_ + 1, XidlParser::cmd_object_3_0_0);
    return true;
  }

  // (key_type_list | cmd_object)*
  private static boolean cmd_object_3_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cmd_object_3_0_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!cmd_object_3_0_0_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "cmd_object_3_0_0", pos_)) break;
    }
    return true;
  }

  // key_type_list | cmd_object
  private static boolean cmd_object_3_0_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "cmd_object_3_0_0_0")) return false;
    boolean result_;
    result_ = key_type_list(builder_, level_ + 1);
    if (!result_) result_ = cmd_object(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // <<param>> (","? <<param>>)* ","?
  static boolean comma_separated_list(PsiBuilder builder_, int level_, Parser param) {
    if (!recursion_guard_(builder_, level_, "comma_separated_list")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = param.parse(builder_, level_);
    result_ = result_ && comma_separated_list_1(builder_, level_ + 1, param);
    result_ = result_ && comma_separated_list_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (","? <<param>>)*
  private static boolean comma_separated_list_1(PsiBuilder builder_, int level_, Parser param) {
    if (!recursion_guard_(builder_, level_, "comma_separated_list_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!comma_separated_list_1_0(builder_, level_ + 1, param)) break;
      if (!empty_element_parsed_guard_(builder_, "comma_separated_list_1", pos_)) break;
    }
    return true;
  }

  // ","? <<param>>
  private static boolean comma_separated_list_1_0(PsiBuilder builder_, int level_, Parser param) {
    if (!recursion_guard_(builder_, level_, "comma_separated_list_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = comma_separated_list_1_0_0(builder_, level_ + 1);
    result_ = result_ && param.parse(builder_, level_);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ","?
  private static boolean comma_separated_list_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comma_separated_list_1_0_0")) return false;
    consumeToken(builder_, COMMA);
    return true;
  }

  // ","?
  private static boolean comma_separated_list_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comma_separated_list_2")) return false;
    consumeToken(builder_, COMMA);
    return true;
  }

  /* ********************************************************** */
  // LINE_COMMENT | BLOCK_COMMENT
  static boolean comment(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "comment")) return false;
    if (!nextTokenIs(builder_, "", BLOCK_COMMENT, LINE_COMMENT)) return false;
    boolean result_;
    result_ = consumeToken(builder_, LINE_COMMENT);
    if (!result_) result_ = consumeToken(builder_, BLOCK_COMMENT);
    return result_;
  }

  /* ********************************************************** */
  // annotation* (!known_object_key KEYWORD) text? (key_value_list_block | key_type_list_block | string_List_block | operation_list_block  | mixed_block)?
  static boolean common_object(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "common_object")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = common_object_0(builder_, level_ + 1);
    result_ = result_ && common_object_1(builder_, level_ + 1);
    pinned_ = result_; // pin = 2
    result_ = result_ && report_error_(builder_, common_object_2(builder_, level_ + 1));
    result_ = pinned_ && common_object_3(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // annotation*
  private static boolean common_object_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "common_object_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!annotation(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "common_object_0", pos_)) break;
    }
    return true;
  }

  // !known_object_key KEYWORD
  private static boolean common_object_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "common_object_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = common_object_1_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, KEYWORD);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // !known_object_key
  private static boolean common_object_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "common_object_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !known_object_key(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // text?
  private static boolean common_object_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "common_object_2")) return false;
    text(builder_, level_ + 1);
    return true;
  }

  // (key_value_list_block | key_type_list_block | string_List_block | operation_list_block  | mixed_block)?
  private static boolean common_object_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "common_object_3")) return false;
    common_object_3_0(builder_, level_ + 1);
    return true;
  }

  // key_value_list_block | key_type_list_block | string_List_block | operation_list_block  | mixed_block
  private static boolean common_object_3_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "common_object_3_0")) return false;
    boolean result_;
    result_ = key_value_list_block(builder_, level_ + 1);
    if (!result_) result_ = key_type_list_block(builder_, level_ + 1);
    if (!result_) result_ = string_List_block(builder_, level_ + 1);
    if (!result_) result_ = operation_list_block(builder_, level_ + 1);
    if (!result_) result_ = mixed_block(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // !ZERO_PARAM_ANNOTATION !SINGLE_PARAM_ANNOTATION !MULTI_PARAM_ANNOTATION CUSTOM_ANNOTATION (STRING_LITERAL | <<block_meta anno_string_list>>)?
  static boolean custom_anno(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "custom_anno")) return false;
    if (!nextTokenIs(builder_, CUSTOM_ANNOTATION)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = custom_anno_0(builder_, level_ + 1);
    result_ = result_ && custom_anno_1(builder_, level_ + 1);
    result_ = result_ && custom_anno_2(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, CUSTOM_ANNOTATION);
    result_ = result_ && custom_anno_4(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // !ZERO_PARAM_ANNOTATION
  private static boolean custom_anno_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "custom_anno_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !consumeToken(builder_, ZERO_PARAM_ANNOTATION);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // !SINGLE_PARAM_ANNOTATION
  private static boolean custom_anno_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "custom_anno_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !consumeToken(builder_, SINGLE_PARAM_ANNOTATION);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // !MULTI_PARAM_ANNOTATION
  private static boolean custom_anno_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "custom_anno_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NOT_);
    result_ = !consumeToken(builder_, MULTI_PARAM_ANNOTATION);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (STRING_LITERAL | <<block_meta anno_string_list>>)?
  private static boolean custom_anno_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "custom_anno_4")) return false;
    custom_anno_4_0(builder_, level_ + 1);
    return true;
  }

  // STRING_LITERAL | <<block_meta anno_string_list>>
  private static boolean custom_anno_4_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "custom_anno_4_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, STRING_LITERAL);
    if (!result_) result_ = block_meta(builder_, level_ + 1, XidlParser::anno_string_list);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // ("<-" | "->")? data_type_body
  static boolean data_type(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = data_type_0(builder_, level_ + 1);
    result_ = result_ && data_type_body(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ("<-" | "->")?
  private static boolean data_type_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_0")) return false;
    data_type_0_0(builder_, level_ + 1);
    return true;
  }

  // "<-" | "->"
  private static boolean data_type_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_0_0")) return false;
    boolean result_;
    result_ = consumeToken(builder_, CHAN_SEND);
    if (!result_) result_ = consumeToken(builder_, CHAN_RECEIVE);
    return result_;
  }

  /* ********************************************************** */
  // SIMPLE_TYPE | type_reference
  static boolean data_type0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type0")) return false;
    if (!nextTokenIs(builder_, "", IDENTIFIER, SIMPLE_TYPE)) return false;
    boolean result_;
    result_ = consumeToken(builder_, SIMPLE_TYPE);
    if (!result_) result_ = type_reference(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // (<<range_scope INTEGER_LITERAL>>? ("*"? data_type0) <<range_scope INTEGER_LITERAL>>?)
  //   | (MAP ("<" data_type "," data_type ">")?)
  //   | (CHAN data_type)
  static boolean data_type_body(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = data_type_body_0(builder_, level_ + 1);
    if (!result_) result_ = data_type_body_1(builder_, level_ + 1);
    if (!result_) result_ = data_type_body_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // <<range_scope INTEGER_LITERAL>>? ("*"? data_type0) <<range_scope INTEGER_LITERAL>>?
  private static boolean data_type_body_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = data_type_body_0_0(builder_, level_ + 1);
    result_ = result_ && data_type_body_0_1(builder_, level_ + 1);
    result_ = result_ && data_type_body_0_2(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // <<range_scope INTEGER_LITERAL>>?
  private static boolean data_type_body_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_0_0")) return false;
    range_scope(builder_, level_ + 1, INTEGER_LITERAL_parser_);
    return true;
  }

  // "*"? data_type0
  private static boolean data_type_body_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_0_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = data_type_body_0_1_0(builder_, level_ + 1);
    result_ = result_ && data_type0(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // "*"?
  private static boolean data_type_body_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_0_1_0")) return false;
    consumeToken(builder_, MULTIPLY);
    return true;
  }

  // <<range_scope INTEGER_LITERAL>>?
  private static boolean data_type_body_0_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_0_2")) return false;
    range_scope(builder_, level_ + 1, INTEGER_LITERAL_parser_);
    return true;
  }

  // MAP ("<" data_type "," data_type ">")?
  private static boolean data_type_body_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, MAP);
    result_ = result_ && data_type_body_1_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // ("<" data_type "," data_type ">")?
  private static boolean data_type_body_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_1_1")) return false;
    data_type_body_1_1_0(builder_, level_ + 1);
    return true;
  }

  // "<" data_type "," data_type ">"
  private static boolean data_type_body_1_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_1_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, LANGLE);
    result_ = result_ && data_type(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, COMMA);
    result_ = result_ && data_type(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, RANGLE);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // CHAN data_type
  private static boolean data_type_body_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "data_type_body_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, CHAN);
    result_ = result_ && data_type(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // annotation* "def" key_value_list_block
  static boolean def_object(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "def_object")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = def_object_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, "def");
    pinned_ = result_; // pin = 2
    result_ = result_ && key_value_list_block(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // annotation*
  private static boolean def_object_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "def_object_0")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!annotation(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "def_object_0", pos_)) break;
    }
    return true;
  }
